crates/math-core/tests/snapshots/wiki_test__wiki046.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\subseteq, \\nsubseteq, \\subsetneq, \\varsubsetneq, \\sqsubseteq"
---
<math>
    <mo lspace="0" rspace="0">⊆</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⊈</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⊊</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⊊︀</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⊑</mo>
</math>
