crates/math-core/tests/snapshots/wiki_test__wiki055.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\le, \\leq, \\lneq, \\leqq, \\nleq, \\nleqq, \\lneqq, \\lvertneqq"
---
<math>
    <mo lspace="0" rspace="0">≤</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≤</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⪇</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≦</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≰</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≦̸</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≨</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≨︀</mo>
</math>
