crates/math-core/tests/snapshots/wiki_test__wiki056.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\ge, \\geq, \\gneq, \\geqq, \\ngeq, \\ngeqq, \\gneqq, \\gvertneqq"
---
<math>
    <mo lspace="0" rspace="0">≥</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≥</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⪈</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≧</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≱</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≧̸</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≩</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≩︀</mo>
</math>
